# libs

./: .gitignore
file_ops/: pyproject.toml
file_ops/src/file_ops/: __init__.py  base.py  utils.py
llm/: pyproject.toml
pensive/: main.py  pyproject.toml
pensive/src/pensive/: __init__.py  core.py  criteria_base.py  decision_policy_base.py  instance.py  models.py  registry.py  snapshot.py  storage.py  strategy_base.py  trace.py  turndiff.py  utils.py
workflows/: pyproject.toml
workflows/src/workflows/: __init__.py
workflows/src/workflows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workflows/src/workflows/agent/: agentic_edit.py  intent_parser.py  intent_validator.py  interactive_trace.py  llm_intent_parser.py  resolution_pipeline.py  resolvers.py  session.py  stepcontext_commands.py  workflow_agent.py
workflows/src/workflows/agent/context/: decorators.py  normalization.py
workflows/src/workflows/agent/contract/: intents.yaml  loader.py
workflows/src/workflows/agent/dispatch/: dispatcher.py
workflows/src/workflows/agent/handlers/: handlers.py
workflows/src/workflows/agent/ontologies/: ontology.py
workflows/src/workflows/agent/parsing/: general_parser.py  intent_parser.py  parameter_extraction.py
workflows/src/workflows/agent/resolution/: resolver_core.py
workflows/src/workflows/agent/utils/: agentic_edit.py  handler_factory.py
workflows/src/workflows/bridge/: actor_record.py
workflows/src/workflows/engine/: base_workflow_engine.py  call_workflow.py  decorators.py  loader.py  models.py  registry.py  step_context.py  workflow_definition.py
(+108 files in other folders)
