[project]
name = "file_ops"
version = "0.1.0"
description = "Internal filesystem utilities"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/file_ops"]
